// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Profile Screen Component render when user has data should match with the html structre of the snapshot 1`] = `
<section
  className="container"
>
  <Header
    searchProfile={[Function]}
  />
  <User
    profile="wesbos"
  />
</section>
`;

exports[`Main Profile Screen Component render when user is empty should match with the html structre of the snapshot 1`] = `
<section
  className="container"
>
  <Header
    searchProfile={[Function]}
  />
</section>
`;
